# movie-watchlist-app

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  appspec.yml  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
Scripts/: activate_venv.sh  install_packages.sh  start_app.sh  stop_app.sh
movie_watchlist/: __init__.py  config.py  db.py  forms.py  schema.py
movie_watchlist/routes/: auth.py  index.py  movie.py
movie_watchlist/static/scripts/: darkmode.js  form_validator.js  index.js
movie_watchlist/static/styles/: dark.css  reset.css  style.css
movie_watchlist/templates/: index.html  movies.html  show_movie.html
movie_watchlist/templates/auth/: login.html  register.html
movie_watchlist/templates/layouts/: base.html
movie_watchlist/templates/macros/: _formhelpers.html
movie_watchlist/templates/movieforms/: add.html  update.html
tests/: conftest.py  test_auth.py  test_factory.py  test_index_route.py  test_movie_routes.py
